# Objectively

./: .cproject  .gitignore  .project  COPYING  Doxyfile  GUIDE.md  Makefile.am  README.md  appveyor.yml  configure.ac  eclipse-code-templates.xml
.github/: FUNDING.yml  copilot-instructions.md
.github/copilot/skills/: add-method.md  new-type.md
.github/workflows/: build.yml  docs.yml  release.yml
Documentation/: cantina-tech-talk-october-2014.md  custom.css  getting-started.md  guide.md  index.md  install.md  layout.xml  style.css
Examples/: .gitignore  Hello.c  Hello.h  HelloCpp.cpp  HelloObjC.m  Makefile.am
Frameworks/: build-libcurl.sh
Objectively.vs15/: .gitignore  Objectively.sln  Objectively.vcxproj  Objectively.vcxproj.filters  PREPARE_ALL.ps1  build_settings.props
Objectively.vs15/Sources/: WinRegex.cpp  Windowly.c  Windowly.h  regex.h
Objectively.vs15/Sources/Objectively/: Config.h
Objectively.vs15/Sources/gnu/: PREPARE.ps1  config.h  dlfcn.h  gnu_config.h  intprops.h  regcomp.c  regex.c  regex.h  regex_internal.c  regex_internal.h  regexec.c
Objectively.vs15/libs/: prepare.bat
Objectively.vs15/libs/curl/: prepare.bat
Objectively.vs15/libs/curl/include/curl/: PREPARE  PREPARE.ps1  curl.h
Objectively.vs15/libs/curl/lib/Win32/: libcurl.lib  zlib.lib
Objectively.vs15/libs/curl/lib/Win64/: libcurl.lib
Objectively.vs15/libs/curl/lib/x64/: libcurl.lib  zlib.lib
Objectively.vs15/libs/dlfcn/Win32/: dlfcn.lib
Objectively.vs15/libs/dlfcn/x64/: dlfcn.lib
Objectively.vs15/libs/iconv/: config.h  prepare.bat
Objectively.vs15/libs/iconv/include/: iconv.h
Objectively.vs15/libs/iconv/lib/: config.h
Objectively.vs15/libs/iconv/lib/Win32/: iconv.lib
Objectively.vs15/libs/iconv/srclib/: error.c
Objectively.vs15/libs/iconv/vs/: iconv.vcxproj  iconv.vcxproj.filters
Objectively.vs15/libs/pthread/: prepare.bat
Objectively.vs15/libs/pthread/include/: pthread.h  sched.h  semaphore.h
Objectively.vs15/libs/pthread/lib/Win32/: pthread.lib
Objectively.vs15/libs/pthread/lib/x64/: pthread.lib
Objectively.xcodeproj/: project.pbxproj
Objectively.xcodeproj/xcshareddata/xcschemes/: Objectively-Array.xcscheme  Objectively-Boole.xcscheme  Objectively-Data.xcscheme  Objectively-Date.xcscheme  Objectively-Dictionary.xcscheme  Objectively-Examples.xcscheme  Objectively-HashTable.xcscheme  Objectively-Hello.xcscheme  Objectively-HelloCpp.xcscheme  Objectively-HelloObjC.xcscheme  Objectively-IndexPath.xcscheme  Objectively-IndexSet.xcscheme  Objectively-JSON.xcscheme  Objectively-List.xcscheme  Objectively-Locale.xcscheme  Objectively-Log.xcscheme  Objectively-MutableArray.xcscheme  Objectively-MutableData.xcscheme  Objectively-MutableDictionary.xcscheme  Objectively-MutableIndexSet.xcscheme  Objectively-MutableSet.xcscheme  Objectively-MutableString.xcscheme  Objectively-Null.xcscheme  Objectively-Number.xcscheme  Objectively-Object.xcscheme  Objectively-Operation.xcscheme  Objectively-PointerArray.xcscheme  Objectively-RESTClient.xcscheme  Objectively-Regex.xcscheme  Objectively-Regexp.xcscheme  Objectively-Resource.xcscheme  Objectively-Set.xcscheme  Objectively-String copy.xcscheme  Objectively-String.xcscheme  Objectively-StringReader.xcscheme  Objectively-Test.xcscheme  Objectively-Tests.xcscheme  Objectively-Thread.xcscheme  Objectively-URL.xcscheme  Objectively-URLCache.xcscheme  (+5 more)
Objectively.xcodeproj/xcuserdata/jdolan.xcuserdatad/xcschemes/: Objectively.xcscheme  xcschememanagement.plist
Objectively.xcworkspace/: contents.xcworkspacedata
Objectively.xcworkspace/xcuserdata/jdolan.xcuserdatad/: UserInterfaceState.xcuserstate
Objectively/Objectively.xcodeproj/: project.pbxproj
Objectively/Objectively.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Objectively/Objectively.xcodeproj/project.xcworkspace/xcuserdata/jdolan.xcuserdatad/: UserInterfaceState.xcuserstate
Sources/: Makefile.am  Objectively.h  Objectively.pc.in
Sources/Objectively/: Array.c  Array.h  Boole.c  Boole.h  Boolean.c  Boolean.h  CachedURLResponse.c  CachedURLResponse.h  Class.c  Class.h  Condition.c  Condition.h  Data.c  Data.h  Date.c  Date.h  DateFormatter.c  DateFormatter.h  Dictionary.c  Dictionary.h  Enum.c  Enum.h  Error.c  Error.h  Hash.c  Hash.h  HashTable.c  HashTable.h  IndexPath.c  IndexPath.h  IndexSet.c  IndexSet.h  JSON.c  JSON.h  JSONContext.c  JSONContext.h  JSONFormatter.c  JSONFormatter.h  JSONPath.c  JSONPath.h  (+85 more)
Templates/Eclipse/: eclipse-code-templates.xml
Templates/Xcode/Objectively C Type.xctemplate/: TemplateInfo.plist  ___FILEBASENAME___.c  ___FILEBASENAME___.h
Tests/: Makefile.am
Tests/Objectively/: .gitignore  Array.c  Boole.c  Boolean.c  Data.c  Date.c  Dictionary.c  Foo.c  HashTable  HashTable.c  Hello  Hello.c  IndexPath.c  IndexSet.c  JSON.c  JSONFormatter.c  JSONSerialization.c  List  List.c  Locale  Locale.c  Log  Log.c  Makefile.am  MutableArray.c  MutableData.c  MutableDictionary.c  MutableIndexSet.c  MutableSet.c  MutableString.c  Null.c  Number.c  Object.c  Operation  Operation.c  PointerArray  PointerArray.c  RESTClient.c  Regex.c  Regexp  (+11 more)
Tests/Objectively/Fixtures/: test.json
scripts/: build-xcframework.sh
src/: Makefile.am  Objectively.h  libobjectively.pc.in  objectively.c  objectively.dylib  objectively.h
src/Objectively/: Array.c  Array.h  Class.c  Class.h  Dictionary.c  Dictionary.h  Lock.c  Lock.h  Makefile.am  Object.c  Object.h  String.c  String.h  Thread.c  Thread.h  Types.h  array.c  class.c  dictionary.h  lock.c  string.c  string.h  thread.c
src/objectively/: Makefile.am  array.c  array.h  class.c  class.h  dictionary.c  dictionary.h  lock.c  lock.h  macros.h  object.c  object.h  string.c  string.h  thread.c  thread.h  types.h
src/tests/: .gitignore  Makefile.am  animals.c  shapes.c
test/: .gitignore  Makefile.am
test/Objectively/: .gitignore  Array.c  Foo.c  Object.c  String.c
test/objectively/: .gitignore  Makefile.am  animals.c  array  array.c  dictionary.c  foo.c  object.c  shapes.c  string.c
tests/: Makefile.am  animals.c  test_invariant_Class.c
(+4 files in other folders)
